# CATdd

./: .env  .gitignore  Dockerfile  Makefile  README.md  RgbTest.cpp  TriangleTest.cpp  catdd apli_exp.yaml  catdd.yaml  catdd_apli_exp.yaml  catdd_exp1.yaml  catdd_exp3.yaml  catdd_exp4.yaml  catdd_opencv.yaml  pyproject.toml  sample_test.sh
bank/: Atm.cpp  Atm.h
bank/motion_module/: Mileage.cpp  Mileage.h  Pid.cpp  Pid.h
bank/test/: MileageTest.cpp  PidTest.cpp
base_result/: cpp_count.txt  needless_count.txt  needless_count_for_test.txt  needless_count_for_test_sub_all_comment.txt  needless_count_for_test_sub_doc_comment.txt  needless_count_sub_all_comment.txt
output/: Atm.cpp
src/: __main__.py  file_interface.py  gpt_interface.py  result_analyzer.py  source_code_generator.py  testcase_analyzer.py
src/action/: base_tester.py  source_code_generator.py  tester.py
src/common/: catdd_info.py  difference.py  file_interface.py  interpreter.py  log.py
src/llm/: gpt_interface.py  prompt.py
src/object/: source_code.py  test_code.py  test_result.py
target_project/application_example/module/: Atm.cpp  Atm.h
target_project/application_example/test/: AtmTest.cpp
target_project/exp1/module/: Rgb.cpp  Rgb.h
target_project/exp1/test/: RgbTest.cpp
target_project/exp2/module/: Triangle.cpp  Triangle.h
target_project/exp2/test/: TriangleTest.cpp
target_project/exp3/module/: NumberGuess.cpp  NumberGuess.h
target_project/exp3/test/: NumberGuessTest.cpp
tests/: __init__.py  test_difference.py  test_interpreter.py
