[tool.poetry]
name = "catdd"
version = "0.1.0"
description = ""
authors = ["miyashita64 <javajavawookjavawook@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.1"
llama-cpp-python = "^0.2.20"
fire = "^0.5.0"
openai = "^1.3.6"
tiktoken = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
